[package]
name = "rdma-cm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.26"
nix = "0.21"
arrayvec = "0.7.1"
thiserror = "1.0.29"

[build-dependencies]
bindgen = "0.59.1"
# futures = "0.3.16"
# async-channel = "1.6.1"

[dev-dependencies]
utilities = { path = "utilities" }
tracing-subscriber = "0.2.19"